--- a/playbook.yml
+++ b/playbook.yml
@@ -1,16 +1,10 @@
 ---
-- hosts: all
+- name: Ansible-HomeServer
+  hosts: all
   become: yes
 
-  tasks:
-  - name: Ensure chrony (for time synchronisation) is installed
-    dnf:
-      name: chrony
-      state: present
-
-  - name: Ensure chrony is running
-    service:
-      name: chronyd
-      state: started
-      enabled: yes
+  roles:
+    - role: geerlingguy.docker
+      tags:
+        - docker
 
